Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128102

Hash constructor with iterators does not work with ranges::views

    XMLWordPrintable

Details

    • cb40a1fa7 (dev), f6d69a757 (6.8)

    Description

      According to documentation, QHash has a constructor accepting an iterator pair, which accepts std::pair<keyType, valueType> as inputs which has  first and second data members.

      However, creating a QHash from a std::ranges::view which contains  those pairs fails ("No matching constructor for initialization").

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes