QHash: adapt to C++20 ranges not offering operator->()

Iterators no longer provide it, because they may need to return a
temporary in some occasions.

Fixes: QTBUG-128102
Pick-to: 6.8
Change-Id: Ide0a7a84f612fff73afffffd49889321cb70505f
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>